--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 
-@import "./reset.css";
-@import "./mcombobox.css";
+@import "./_reset.scss";
+@import "./_mcombobox.scss";
 
 body {
     display: flex;
